# Sheepit-Manager

./: .gitignore  CREDITS  Cargo.toml  README.md  bot.py  build.rs  main.py  makevenv  makevenv.bat  requirements.txt  run
.cargo/: config.toml
gui/: app-window.slint  blocks.slint
gui/blocks/: sidebar.slint  values.slint
gui/pages/: config.slint  main.slint
src/: gui.rs  main.rs  tui.rs
ui/: app-window.slint  app_window.slint  main.slint
ui/blocks/: sidebar.slint  themes.slint  values.slint
ui/pages/: config.slint  devices.slint  logs.slint  main.slint
